增加配置文件

--- a/tpl.test.com.conf
+++ b/tpl.test.com.conf
@@ -2,7 +2,7 @@ server {
     listen      80;
     server_name tpl.test.com cd.uu.cc;
 
-    root        /data/www/php-config;  
+    root        /data/www/php-demo;  
     access_log  /data/log/nginx/tpl.test.com.access.log;
     error_log   /data/log/nginx/tpl.test.com.error.log;
     rewrite_log on;
